--- a/titulo-blog.css
+++ b/titulo-blog.css
@@ -44,6 +44,7 @@ body {
 .container-destaque {
     font-family: "Krona One", sans-serif;
     font-size: 22px;
+    font-weight: 600;
     color: blueviolet;
 }
 .container-subtitulo {
