--- a/titulo-blog.css
+++ b/titulo-blog.css
@@ -31,7 +31,7 @@ body {
 
 }
 .container-titulo {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Krona One", sans-serif;
     font-size: 32px;
 
 }
@@ -39,17 +39,16 @@ body {
     font-family: "Montserrat", sans-serif;
     font-size: 14px;
     line-height: 1.5;
-    font-weight: 600;
+    margin-bottom: 12px;
 }
 .container-destaque {
     font-family: "Krona One", sans-serif;
-    font-size: 22px;
-    font-weight: 600;
+    font-size: 18px;
     color: blueviolet;
 }
 .container-subtitulo {
-    font-family: "Montserrat", sans-serif;
-    font-size: 16px;
+    font-family: "Krona One", sans-serif;
+    font-size: 14px;
 }
 .container-link {
     display: flex;
