--- a/titulo-blog.css
+++ b/titulo-blog.css
@@ -37,12 +37,14 @@ body {
 }
 .container-texto {
     font-family: "Montserrat", sans-serif;
+    font-weight: 400;
     font-size: 14px;
     line-height: 1.5;
-    margin-bottom: 12px;
+    margin-bottom: 28px;
 }
 .container-destaque {
     font-family: "Krona One", sans-serif;
+    font-weight: 600;
     font-size: 18px;
     color: blueviolet;
 }
@@ -64,7 +66,7 @@ body {
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 14px;
     border-radius: 12px;
     padding: 10px;
     text-decoration: none;
