--- a/titulo-blog.css
+++ b/titulo-blog.css
@@ -24,7 +24,7 @@ body {
     gap: 32px;
 }
 .container-bloco {
-    width: 380px;
+    width: 532px;
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -32,25 +32,26 @@ body {
 }
 .container-titulo {
     font-family: "Krona One", sans-serif;
-    font-size: 32px;
-
+    font-size: 36px;
+    font-weight: 400;
 }
 .container-texto {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 20px;
     line-height: 1.5;
     margin-bottom: 28px;
 }
 .container-destaque {
     font-family: "Krona One", sans-serif;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 24px;
     color: blueviolet;
 }
 .container-subtitulo {
     font-family: "Krona One", sans-serif;
-    font-size: 14px;
+    font-size: 20px;
+    font-weight: 400;
 }
 .container-link {
     display: flex;
@@ -60,23 +61,26 @@ body {
     gap: 12px
 }
 .botao-links {
-    background-color: blueviolet;
+    border: 3px solid blueviolet;
+    background-color: transparent;
     color: aliceblue;
-    width: 180px;
+    width: 378px;
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
-    font-size: 14px;
-    border-radius: 12px;
-    padding: 10px;
+    font-size: 18px;
+    border-radius: 8px;
+    padding: 16px;
+    gap: 16px;
     text-decoration: none;
     cursor: pointer;
     transition: 1s;
 }
 .botao-links:hover {
-    background-color: rgb(22, 222, 99);
+    border: 3px solid rgb(22, 222, 99);
+    background-color:transparent
     color: aliceblue;
-    width: 180px;
+    width: 300px;
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
