--- a/titulo-blog.css
+++ b/titulo-blog.css
@@ -18,7 +18,7 @@ body {
 }
 .container {
     display: flex;
-    align-items: center; /* Alinha os itens ao topo */
+    align-items: flex-start;/* Alinha os itens ao topo */
     justify-content: center;
     margin: 10%;
     gap: 32px;
@@ -58,7 +58,7 @@ body {
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    gap: 12px
+    gap: 12px;
 }
 .botao-links {
     border: 3px solid blueviolet;
@@ -71,24 +71,16 @@ body {
     font-size: 18px;
     border-radius: 8px;
     padding: 16px;
-    gap: 16px;
     text-decoration: none;
     cursor: pointer;
     transition: 1s;
 }
 .botao-links:hover {
-    border: 3px solid rgb(22, 222, 99);
-    background-color:transparent
-    color: aliceblue;
-    width: 300px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    border-radius: 12px;
-    padding: 10px;
-    text-decoration: none;
-    transition: 1s;
+        border: 3px solid rgb(22, 222, 99);
+        width: 300px;
+        font-size: 16px;
+        border-radius: 12px;
+        padding: 10px;
 }
 .fotointro {
     box-sizing: content-box;
