--- a/titulo-blog.css
+++ b/titulo-blog.css
@@ -44,7 +44,7 @@ body {
 }
 .container-destaque {
     font-family: "Krona One", sans-serif;
-    font-weight: 600;
+    font: bold;
     font-size: 24px;
     color: blueviolet;
 }
