--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
     padding: 0;
 }
 .cabecalho {
-    padding: 2% 0 0 20%;
+    padding: 5% 0 0 20%;
 }
 .cabecalho-menu {
     display: flex;
@@ -29,7 +29,7 @@ body {
 }
 .container {
     display: flex;
-    align-items: flex-start;/* Alinha os itens ao topo */
+    align-items: center;/* Alinha os itens ao topo */
     justify-content: space-between;
     padding: 8% 20%;
 }
@@ -46,6 +46,7 @@ body {
     font-weight: 400;
 }
 .container-texto {
+    max-width: 452px;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 20px;
@@ -67,7 +68,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    align-items: center;
+    align-items:center;
     gap: 20px;
 }
 .botao-links {
@@ -93,9 +94,14 @@ body {
         border: 2px solid rgb(22, 222, 99);
         width: 352px;
         font-size: 20px;
-
-
 }
+.foto-apresentacao{
+        max-width: 320px; 
+        width: 100%;
+        height: auto;
+        border-radius: 50%;
+}
+
 .fotointro {
     box-sizing: content-box;
 }
