--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
     padding: 0;
 }
 .cabecalho {
-    padding: 5% 0 0 20%;
+    padding: 10% 0 0 15%;
 }
 .cabecalho-menu {
     display: flex;
@@ -31,32 +31,33 @@ body {
     display: flex;
     align-items: center;/* Alinha os itens ao topo */
     justify-content: space-between;
-    padding: 8% 20%;
+    padding: 5% 15%;
+    gap: 82px;
 }
 .container-bloco {
-    width: 532px;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 40px;
 
 }
 .container-titulo {
     font-family: "Krona One", sans-serif;
-    font-size: 36px;
+    font-size: 2rem;
     font-weight: 400;
 }
 .container-texto {
     max-width: 452px;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 1.5rem;
     line-height: 1.5;
     margin-bottom: 28px;
 }
 .container-destaque {
     font-family: "Krona One", sans-serif;
     font: bold;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: blueviolet;
 }
 .container-subtitulo {
@@ -69,7 +70,7 @@ body {
     justify-content: space-between;
     flex-direction: column;
     align-items:center;
-    gap: 20px;
+    gap: 32px;
 }
 .botao-links {
     display: flex;
@@ -83,7 +84,7 @@ body {
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 1.25rem;
     border-radius: 8px;
     padding: 14px 0;
     text-decoration: none;
@@ -93,13 +94,11 @@ body {
 .botao-links:hover {
         border: 2px solid rgb(22, 222, 99);
         width: 352px;
-        font-size: 20px;
+    
 }
 .foto-apresentacao{
-        max-width: 320px; 
-        width: 100%;
-        height: auto;
-        border-radius: 50%;
+        width: 50%;
+        max-width: 320px;
 }
 
 .fotointro {
@@ -112,11 +111,34 @@ img {
     color: black;
     background-color: #22D4FD;
     text-align: center;
-    padding: 12px;
+    padding: 24px;
     font-family: "Montserrat", sans-serif;
-    font-weight: 400 ;
-    font-size: 18px;
+    font-weight: 400;
+    font-size: 1rem;
 
 }
 
-/* Responsivo Mobile */
+@media (max-width: 620px){
+    .cabecalho{
+        padding: 15%;
+        margin-bottom: 10px;
+    }
+    .cabecalho-menu{
+        justify-content: center;
+    }
+    .container{
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+    .container-bloco{
+        width: auto;
+    }
+    .container-titulo{
+        text-align: center;
+    }
+    .container-texto{
+        text-align: center;
+    }
+    
+
+}
