--- a/style/style.css
+++ b/style/style.css
@@ -97,7 +97,7 @@ body {
     
 }
 .foto-apresentacao{
-        width: 50%;
+        width: auto;
         height: auto;
         max-width: 280px;
 }
