--- a/style/style.css
+++ b/style/style.css
@@ -97,9 +97,9 @@ body {
     
 }
 .foto-apresentacao{
-        width: auto;
+        width: 50%;
         height: auto;
-        max-width: 280px;
+        max-width: 250px;
 }
 
 .fotointro {
@@ -143,7 +143,7 @@ img {
     .foto-apresentacao{
         width: 100%;
         height: auto;
-        max-width: 280px;
+        max-width: 200px;
     }
 
 }
