--- a/style/style.css
+++ b/style/style.css
@@ -6,13 +6,13 @@
     padding: 0;
 }
 .cabecalho {
-    padding: 10% 0 0 15%;
+    padding: 10% 0 0 18%;
 }
 .cabecalho-menu {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 80px; 
+    gap: 100px; 
 }
 .cabecalho-menu-link {
     font-family: "Montserrat", sans-serif;
@@ -33,16 +33,16 @@ body {
 }
 .container {
     display: flex;
-    align-items: center;/* Alinha os itens ao topo */
+    align-items: flex-start;/* Alinha os itens ao topo */
     justify-content: space-between;
-    padding: 5% 15%;
+    padding: 6% 18%;
     gap: 82px;
 }
 .container-bloco {
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 32px;
 
 }
 .container-titulo {
@@ -72,8 +72,8 @@ body {
 .container-link {
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
-    align-items:center;
+    flex-direction: row;
+    align-items: center;
     gap: 32px;
 }
 .botao-links {
@@ -90,7 +90,7 @@ body {
     font-weight: 600;
     font-size: 1.25rem;
     border-radius: 8px;
-    padding: 14px 0;
+    padding: 14px 32px;
     text-decoration: none;
     cursor: pointer;
     transition: 0.4s;
@@ -103,7 +103,7 @@ body {
 .foto-apresentacao{
         width: 50%;
         height: auto;
-        max-width: 200px;
+        max-width: 250px;
 }
 
 .fotointro {
@@ -111,6 +111,7 @@ body {
 }
 img {
     border-radius: 100%;
+    max-width: 250px;
 }
 .rodape {
     color: black;
