--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 80px; 
+    gap: 89px;
 }
 .cabecalho-menu-link {
     font-family: "Montserrat", sans-serif;
@@ -31,14 +31,14 @@ body {
     display: flex;
     align-items: flex-start;/* Alinha os itens ao topo */
     justify-content: space-between;
-    padding: 6% 18%;
+    padding: 8% 18%;
     gap: 82px;
 }
 .container-bloco {
     width: 50%;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 32px;
 
 }
 .container-titulo {
@@ -116,8 +116,13 @@ img {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     font-size: 1rem;
-
+    margin-top: 8%;
 }
+.desenvolvedor {
+    text-decoration: none;
+    color:blueviolet;
+}
+
 
 @media (max-width: 620px) {
     .cabecalho {
